<resources>
    <string name="app_name">Groceries List App</string>
    <string name="addgroceries">addgroceries</string>
    <string name="_1">1</string>
    <string name="jambo">jambo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grocery_name">grocery name</string>
    <string name="add_price">add price</string>
    <string name="save">save</string>
    <string name="add_quantity">add quantity</string>
    <string name="delete">delete</string>
    <string name="jambo_cns">jambo cns</string>
    <string name="hey">hey</string>
    <string name="each">each</string>
    <string name="quantity_k">Quantity: K</string>
    <string name="k">/@ K</string>
    <string name="quantity">Quantity:</string>
    <string name="total_price">Total price:</string>
    <string name="edit">edit</string>
    <string name="totalAmount">Total Amount</string>
    <string name="update">update</string>
    <string name="at">at</string>

    <string-array name="currency_spinners">
        <item>K</item>
        <item>$</item>
        <item>R</item>
        <item>U</item>
    </string-array>
    <string-array name="unit_spinners">
        <item>KG</item>
        <item>Bag</item>
        <item>Bags</item>
        <item>Packet</item>
        <item>Packets</item>
        <item>Tray</item>
        <item>Trays</item>
        <item>Bunch</item>
        <item>Tablet</item>
    </string-array>

</resources>