<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#A3FFFFFF"
    android:orientation="vertical"
    android:id="@+id/row">

    <androidx.cardview.widget.CardView
        android:id="@+id/groceries_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#9EFFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/groceries_row_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#83FFFFFF"
            android:padding="10dp"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView

                android:id="@+id/grocery_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="sans-serif"
                android:text="@string/jambo"
                android:textColor="#0BA694"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints" />

            <!--suppress AndroidDomInspection -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:fontFamily="sans-serif"
                android:text="@ K"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/quantity"
                app:layout_constraintStart_toEndOf="@+id/quantity"
                app:layout_constraintTop_toTopOf="@+id/quantity"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:fontFamily="serif"
                android:text="@string/each"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/price"
                app:layout_constraintStart_toEndOf="@+id/price"
                app:layout_constraintTop_toTopOf="@+id/price"
                app:layout_constraintVertical_bias="0.0" />

            <!--suppress AndroidDomInspection -->

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="serif"
                android:includeFontPadding="false"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textColorLink="#1ABFB0"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/total_price"
                app:layout_constraintStart_toEndOf="@+id/checkBox" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/total_price"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView" />

            <TextView
                android:id="@+id/totals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/total_price"
                app:layout_constraintStart_toEndOf="@+id/total_price"
                app:layout_constraintTop_toTopOf="@+id/total_price" />

            <ImageButton
                android:id="@+id/edit_grocery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:contentDescription="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.675"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit_grocery"
                tools:ignore="VectorDrawableCompat" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.405" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>